# BlinkyMap

./: .gitignore  BlinkyMap.spec  CLAUDE.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  blinkymap_server.py  main.py  menu.inc  plugin.php  pluginInfo.json  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml
blinkymap/: __init__.py  __main__.py  app.py  capture.py  controller.py  export.py  triangulate.py  viewer3d.py
fpp-plugin/: blinkymap_server.py  fpp-info.json  install.sh
fpp-plugin/www/: index.php
fpp-plugin/www/blinkymap/: app.js  index.html  style.css  viewer3d.js
scripts/: apache_check.sh  diagnose.sh  fix_apache.sh  fpp_install.sh  fpp_read.sh  setup.sh
www/: index.php
www/blinkymap/: app.js  camera.js  index.html  style.css  viewer3d.js
